O365: no longer apply the disable integrity check workaround by default, fixed in openjfx
git-svn-id: https://svn.code.sf.net/p/davmail/code/trunk@3494 3d1905a2-6b24-0410-a738-b14d5a86fcbd